test/sema/negative/wrong_arg_num5.impala
fn f() -> () {
    return(4)
}
