test/sema/negative/wrong_arg_num5.output
wrong_arg_num5.impala:2 col 5 - 13: error: too many arguments: 1 for 0
